<resources>
    <string name="app_name">Settings Value Checker</string>
    <string name="current_brightness_level">Current brightness level(0~255): </string>
    <string name="volume_type">Volume Type: </string>
    <string name="max_volume_level">Max volume level: </string>
    <string name="current_volume_level">Current volume level: </string>
    <string name="refresh">Refresh</string>
    <string name="call">Call</string>
    <string name="system">System</string>
    <string name="ringtone">Ringtone</string>
    <string name="media">Media</string>
    <string name="alarm">Alarm</string>
    <string name="notification">Notification</string>
</resources>
