<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dukeg.settingsvaluechecker.MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/current_brightness_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/current_brightness_level"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/volume_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/volume_type"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/volume_type_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/volume_type" />
        </LinearLayout>

        <TextView
            android:id="@+id/max_volume_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.99"
            android:text="@string/max_volume_level"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/current_volume_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_volume_level"
            android:textSize="18sp" />

        <Button
            android:id="@+id/refresh_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/refresh"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
